--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ if(WARNING_FLAG)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--exclude-libs,ALL")
 endif()
 
-# find_package(Threads REQUIRED)
+find_package( OpenCV REQUIRED )
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories("${PROJECT_SOURCE_DIR}/bl")
@@ -45,7 +45,7 @@ add_executable(SAMPLE
 )
 
 target_link_libraries(SAMPLE
-  # ${CMAKE_THREAD_LIBS_INIT}
+  ${OpenCV_LIBS}
   sample_bl
   sample_common
   librt.so
