--- a/bl/CMakeLists.txt
+++ b/bl/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(APP_NAME sample_bl)                                     
+set(APP_NAME cc_device_bl)                                     
 
 add_library(${APP_NAME} STATIC   
 	src/sample_init_handler.cpp
