--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(APP_NAME sample_common)
+set(APP_NAME cc_device_common)
 
 add_library(${APP_NAME} STATIC
 	src/cc_device_img_capture_handler.cpp
