modified common.hpp and created new handles

--- a/bl/CMakeLists.txt
+++ b/bl/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(APP_NAME cc_device_bl)                                     
 
 add_library(${APP_NAME} STATIC   
-	src/sample_init_handler.cpp
+	src/cc_device_adas_v1_handler.cpp
 )                                         
